// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectAddress > should render disabled 1`] = `
<div>
  <button
    class="focus:outline-hidden relative w-full rounded focus:ring-2 focus:ring-theme-primary-400 cursor-default"
    data-testid="SelectAddress__wrapper"
    disabled=""
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700 text-theme-secondary-text"
          data-testid="SelectAddress__input"
          disabled=""
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render empty 1`] = `
<div>
  <button
    class="focus:outline-hidden relative w-full rounded focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render invalid 1`] = `
<div>
  <button
    class="focus:outline-hidden relative w-full rounded focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13 right-24"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <div
          class="pr-3"
        >
          <span>
            <span>
              <span
                data-testid="Input__error"
              >
                <div
                  class="text-theme-danger-500"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </span>
        </div>
        <div
          class="pl-3"
        >
          <div
            class="flex items-center space-x-3 rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render with preselected address 1`] = `
<div>
  <button
    class="focus:outline-hidden relative w-full rounded focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      >
        <span>
          <span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-sm sm:text-base text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
              data-testid="Address__address"
            >
              0x659A76be283644AEc2003aa8ba26485047fd1BFB
            </span>
          </span>
        </span>
      </div>
    </span>
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value="0x659A76be283644AEc2003aa8ba26485047fd1BFB"
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render without user icon 1`] = `
<div>
  <button
    class="focus:outline-hidden relative w-full rounded focus:ring-2 focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-4"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
    </div>
  </button>
</div>
`;
